<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string
		name="hello">Hello World, MainActivity!</string>
	<string
		name="app_name">DroidMote</string>
	<string
		name="characters">Characters</string>
	<string
		name="special">Special keys</string>
	<string
		name="arrows">Arrows</string>
	<string
		name="btName">Displayed name:</string>
	<string
		name="btAction">Action:</string>
	<string
		name="btActionSelect">Select</string>
	<string
		name="btActionGroup">group</string>
	<string
		name="save">Uložit</string>
	<string
		name="cancel">Storno</string>
	<string
		name="setIP">IP adresa počítače</string>
	<string
		name="setGroup">UDP skupina</string>
	<string
		name="setProtocol">Protokol</string>
	<string
		name="setPort">Port</string>
	<string
		name="udp">UDP</string>
	<string
		name="tcp">TCP</string>
	<string
		name="settings">Nastavení</string>
	<string
		name="scanSettings">ScanQR</string>
	<string
		name="profileName">Jméno profilu</string>
	<string
		name="add">Přidat</string>
	<string
		name="edit">Editovat</string>
	<string
		name="clear">Smazat</string>
	<string
		name="delete">Smazat</string>
	<string
		name="profileList">Seznam profilů</string>
	<string
		name="deleteMessage">Opravdu chcete smazat tento profil?</string>
	<string
		name="deleteTitle">Smazat?</string>
	<string
		name="touchpad">Touchpad</string>
	<string
		name="toggleFullscreen">Přepnout Fullscreen</string>
	<string
		name="invalidPort">Zadali jste špatně port. Musí být v rozmezí 0-65535</string>
	<string
		name="qr_not_found_title">Čtečka kódů nenalezena</string>
	<string
		name="qr_not_found_message">V telefonu nemáte nainstalovanou čtečku QR kodů. Nainstalovat z Marketu?</string>
	<string
		name="screenLockOn">Deaktivovat ScreenLock</string>
	<string
		name="screenLockOff">Aktivovat ScreenLock</string>
	<string
		name="wifi_dialog_title">Aktivovat WiFi?</string>
	<string
		name="wifi_dialog_message">Nejste připojeni k žádné WiFi síti - Droidmote nebude s největší pravděpodobností fungovat.
		Chcete se nyní připojit k WiFi?</string>
	<string
		name="wifi_dialog_ok">Připojit</string>

</resources>
