<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/editProfile"
		android:title="@string/edit"
		android:icon="@android:drawable/ic_menu_edit" />
	<item
		android:id="@+id/deleteProfile"
		android:title="@string/delete"
		android:icon="@android:drawable/ic_menu_delete" />
		
	<item
		android:id="@+id/profileList"
		android:title="@string/profileList"
		android:icon="@drawable/ic_menu_list" />
	<item
		android:id="@+id/setIP"
		android:title="@string/settings"
		android:icon="@android:drawable/ic_menu_preferences" />
	
	
	<item
		android:id="@+id/modeTouchpad"
		android:title="@string/touchpad"
		android:icon="@drawable/ic_menu_touchpad" />
	<item
		android:id="@+id/toggleFullscreen"
		android:title="@string/toggleFullscreen"
		android:icon="@drawable/ic_menu_fullscreen" />
	<item
		android:id="@+id/toggleScreenLock"
	 />


</menu>