<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<ScrollView
		android:layout_weight="1"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:id="@+id/btLayout"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">


			<TextView
				android:text="@string/btName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/btEditName"
						android:layout_height="wrap_content"
						android:layout_width="fill_parent"
						android:layout_weight="1" />

					<Button
						android:id="@+id/btNameReset"
						android:layout_width="45dp"
						android:layout_height="45dp"
						android:layout_alignParentRight="true"
						android:background="@drawable/reset"
						android:focusable="false" />

				</RelativeLayout>


			</LinearLayout>


		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_weight="0"
		android:background="@android:drawable/bottom_bar"
		android:paddingLeft="5dp"
		android:paddingTop="5dp">
		<Button
			android:id="@+id/btSave"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/save"
			android:layout_weight="1" />
		<Button
			android:id="@+id/btCancel"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/cancel"
			android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>